--- a/index.html
+++ b/index.html
@@ -453,6 +453,7 @@
 const baseTiles = L.tileLayer('https://{s}.tile.openstreetmap.org/{z}/{x}/{y}.png', {
   maxZoom: 19
 }).addTo(map);
+  const roadsRenderer = L.canvas({ padding: 0.5 }); // try 0.5; bump to 0.6 if needed
 function setupTilePaneBlur(map, baseTiles) {
   const tilePane = map.getPane('tilePane');
   if (!tilePane || !baseTiles) return;
