--- a/index.html
+++ b/index.html
@@ -946,7 +946,8 @@ async function loadMap() {
               color: 'black',
               weight: 20,
               opacity: 0,
-              pane: 'clickable-buffer'
+              pane: 'clickable-buffer',
+              renderer: roadsRenderer,
             },
             onEachFeature: function (_, bufLayer) {
               const state = segmentStateMap.get(id);
