--- a/index.html
+++ b/index.html
@@ -942,6 +942,7 @@ async function loadMap() {
 
           // 🟠 Add invisible buffer layer for easier clicking/tapping
           const buffer = L.geoJSON(feature, {
+            renderer: roadsRenderer, 
             style: {
               color: 'black',
               weight: 20,
