--- a/index.html
+++ b/index.html
@@ -878,7 +878,7 @@ async function loadMap() {
     .then(res => res.json())
     .then(data => {
       const roadLayer = L.geoJSON(data, {
-        pane: 'hiddenRoads',
+        pane: 'solvedPane',
         renderer: roadsRenderer,
         // ✅ This applies to all roads, unless overridden below
           style: {
