--- a/index.html
+++ b/index.html
@@ -448,6 +448,8 @@
   map.getPane('townshipPane').style.zIndex = 510;
   map.createPane('hoverPane');
   map.getPane('hoverPane').style.zIndex = 700; // ↑ was 499; put it ABOVE township (510)
+  if (!map.getPane('solvedPane')) map.createPane('solvedPane');
+  map.getPane('solvedPane').style.zIndex = 710;
   map.createPane('maskPane'); // Create a custom pane for the gray mask
   map.getPane('maskPane').style.zIndex = 299; // Ensure it renders below roads
 const baseTiles = L.tileLayer('https://{s}.tile.openstreetmap.org/{z}/{x}/{y}.png', {
