--- a/index.html
+++ b/index.html
@@ -1137,7 +1137,7 @@ fetch('Counties/Boundaries_County_Lancaster_PA.geojson')
   .then(res => res.json())
   .then(data => {
     const countyLayer = L.geoJSON(data, {
-      pane: 'countyPolygon'
+      pane: 'countyPolygon',
       style: {
         color: 'black',
         weight: 1.5,
