--- a/index.html
+++ b/index.html
@@ -648,30 +648,46 @@ function armSolvedSegmentsForReentry() {
 }
 function normalizeCorrectOverlays() {
   try {
-    // Prefer Leaflet panes; fallback to DOM
-    const pane =
-      map.getPane?.('overlayPane') ||
-      map.getPane?.('effectsPane') ||
-      document.querySelector('.leaflet-overlay-pane');
-    if (!pane) return;
+    // Use whichever group you actually have
+    const group =
+      (typeof roadsLayerGroup !== 'undefined' && roadsLayerGroup) ? roadsLayerGroup :
+      (typeof roadLayer       !== 'undefined' && roadLayer)       ? roadLayer       :
+      null;
+    if (!group) return;
 
-    const BLUE = 'rgb(51, 136, 255)'; // Leaflet default
-    pane.querySelectorAll('svg path').forEach(p => {
-      const s = getComputedStyle(p);
-      const isBlue = s.stroke === BLUE || p.getAttribute('stroke') === '#3388ff';
+    group.eachLayer(l => {
+      const segId = String(l.feature?.id ?? '');
+      const st = segmentStateMap.get(segId);
+      if (!st || (!st.correct && !st.used_hint)) return;
 
-      // If it rendered blue in the overlay pane, force our solved style.
-      if (isBlue) {
-        p.style.stroke = '#23c35b';
-        p.style.strokeOpacity = 0.6;
-        p.style.strokeWidth = '6px';
-        p.style.fill = 'none';
-        p.style.pointerEvents = 'none';
-        p.classList.remove('leaflet-interactive');
+      // 1) Hide the base (blue/black) stroke so it can’t sit above green
+      const el = l.getElement?.();
+      l.setStyle({ color: 'transparent', opacity: 0, weight: 0 });
+      l.options.interactive = false;
+      if (el) {
+        el.style.display = 'none';
+        el.style.stroke = 'none';
+        el.removeAttribute('stroke');
+        el.removeAttribute('stroke-opacity');
+        el.removeAttribute('stroke-width');
+        el.classList.remove('leaflet-interactive','active-highlight','hover-green','correct-final');
+      }
+      l._originalColor = 'greenish';
+
+      // 2) If we haven't drawn a solved overlay for this segment, add one on the high pane
+      if (!l.__hasSolvedOverlay) {
+        L.geoJSON(l.feature, {
+          pane: 'solvedPane',
+          renderer: roadsRenderer,    // keep your padded renderer
+          interactive: false,
+          style: { color: '#36a15a', weight: 7, opacity: 0.65, lineCap: 'round' }
+        }).addTo(map);
+        l.__hasSolvedOverlay = true;
       }
     });
   } catch {}
 }
+
 function scrubHiddenRoadsBlue() {
   try {
     const pane =
