--- a/index.html
+++ b/index.html
@@ -1582,6 +1582,9 @@ if (countyLayerRef) {
     for (const l of nameToLayers[currentRoad.name] || []) {
   const sid = String(l.feature.id);
   segmentStateMap.set(sid, { correct: true, used_hint: false });
+      console.log('➡️ calling normalizeCorrectOverlays()');
+normalizeCorrectOverlays();   // no try/catch — we want errors if it’s not reachable
+
 }
 // run once here (outside the loop)
   try { normalizeCorrectOverlays(); } catch {}
