--- a/index.html
+++ b/index.html
@@ -685,6 +685,7 @@ function normalizeCorrectOverlays() {
         l.__hasSolvedOverlay = true;
       }
     });
+    console.log('normalizeCorrectOverlays sees solved segments →', hits); // ← add
   } catch {}
 }
 
