--- a/index.html
+++ b/index.html
@@ -1599,36 +1599,37 @@ if (countyLayerRef) {
     const segmentIds = layers.map(l => String(l.feature.id));
     console.log('calling normalizeCorrectOverlays() with segments:', segmentIds);
 
-    // 4) draw green overlays & hide base strokes (force immediately)
+   // 4) play the existing dissolve animation, then finalize
 layers.forEach(l => {
-  // hide base stroke so it can’t flash blue
   const el = l.getElement?.();
-  l.setStyle({ color: 'transparent', opacity: 0, weight: 0 });
+  if (!el) return;
+
+  // stop interactions while it animates
   l.options.interactive = false;
-  if (el) {
+  el.classList.remove('hover-green','active-highlight','correct-dissolve','correct-final');
+
+  // restart CSS animation if this element was used before
+  // (reflow trick so keyframes fire each time)
+  void el.offsetWidth;
+
+  // kick off your CSS dissolve (uses @keyframes dissolveBlueToGreen)
+  el.classList.add('correct-final');
+
+  // add the permanent green overlay so it’s there as the blue dissolves
+  ensureSolvedOverlay(l);
+
+  // when the animation finishes, hide the base stroke completely
+  const onEnd = () => {
+    el.removeEventListener('animationend', onEnd);
+    l.setStyle({ color: 'transparent', opacity: 0, weight: 0 });
     el.style.display = 'none';
-    el.style.stroke = 'none';
     el.removeAttribute('stroke');
     el.removeAttribute('stroke-opacity');
     el.removeAttribute('stroke-width');
-    el.classList.remove('leaflet-interactive','active-highlight','hover-green','correct-final');
-  }
-  l._originalColor = 'greenish';
-
-  // add the green overlay once on the solved pane
-  if (!l.__hasSolvedOverlay) {
-    L.geoJSON(l.feature, {
-      pane: 'solvedPane',
-      renderer: roadsRenderer,
-      interactive: false,
-      style: { color: '#36a15a', weight: 7, opacity: 0.65, lineCap: 'round' }
-    }).addTo(map);
-    l.__hasSolvedOverlay = true;
-  }
+  };
+  el.addEventListener('animationend', onEnd);
 });
 
-// (optional safety, fine to keep)
-try { normalizeCorrectOverlays(); } catch {}
 
 
     // 5) close modal + clear inputs
